<resources>
    <string name="app_name">InClass10</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_sign_up">UserSignUp</string>
    <string name="hint_First_Name">First Name</string>
    <string name="hint_LastName">Last Name</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="hint_CnfPass">Repeat Password</string>
    <string name="btn_SignUp">SignUp</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Login">Login</string>
    <string name="title_activity_notes">Notes</string>
    <string name="lbl_welcomeUser">Hey!!!</string>
    <string name="btn_AddNote">Add Note</string>
    <string name="title_activity_add_new_note">AddNewNote</string>
    <string name="textViewNote">Add Note:</string>
    <string name="editTextNote" />
    <string name="ButtonAddNote">Add Note</string>
    <string name="CancelBtn">Cancel</string>

</resources>
