<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewNote"
    tools:showIn="@layout/activity_add_new_note">

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="39dp"
        android:text="@string/textViewNote"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_AddNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_AddNote"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_AddNote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="55dp"
        android:text="@string/ButtonAddNote"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_AddNote" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="85dp"
        android:text="@string/CancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_AddNote1"
        app:layout_constraintTop_toBottomOf="@+id/editText_AddNote" />
</android.support.constraint.ConstraintLayout>